--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <buttton class="btn-1">Contact Us</buttton>
         </div>
     </header>
+    <!-- main section -->
     <main style="display:block">
         <section class="m-section">
         <div class="image-wrapper"> 
