--- a/index.html
+++ b/index.html
@@ -80,4 +80,32 @@
             </div> 
           </div> 
     </main>
-   
+    <!-- footer section -->
+    <footer>
+        <div class="f1">
+            <h1>Future</h1>
+            <p>There are many variations of passages of Lorem Ipsum<br> 
+                available, but the majority have suffered alteration in some<br> 
+                form, by injected humour, or randomised words.<br>
+                <br>
+                Email : info@gmail.com<br>
+                <br>
+                Phone : 01500 00 00 00
+            </p>
+            <div class="f-image">
+                <img src="images/icons/fb.png">
+                <img style="padding-left: 16px" src="images/icons/twitter.png">
+                <img style="padding-left: 16px" src="images/icons/youtube.png">
+            </div>
+        </div>
+        <div class="f2">
+            <h2>Subscribe</h2>
+            <form>
+                <input type="email" placeholder="  Enter Your Email"><br>
+                <br>
+            </form>
+            <button class="btn-2">Subscribe</button>
+        </div>
+    </footer>
+</body>
+</html>
