--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                 <img style="padding-left: 16px" src="images/icons/youtube.png">
             </div>
         </div>
-        <div class="f2">
+        <section class="f2">
             <h2>Subscribe</h2>
             <form>
                 <input type="email" placeholder="  Enter Your Email"><br>
                 <br>
             </form>
             <button class="btn-2">Subscribe</button>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
